agregue lista de juegos sin nombres

--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
     <p aling="center"> STEAM </p>
     <br><br>
     <p aling="center"> STORE </p>
+    <br><br>
+    <ul>
+        <li> Juego A </li>
+        <li> Juego B </li>
+        <li> Juego C </li>
+        <li> Juego D </li>
+        <li> Juego E </li>
+    </ul>
 </body>
 </html>
