agregue apartado de resumen en cada juego

--- a/index.html
+++ b/index.html
@@ -12,10 +12,25 @@
     <br><br>
     <ul>
         <li> Juego A </li>
+        <ul>
+            <li> Resumen del Juego </li>
+        </ul>
         <li> Juego B </li>
+        <ul>
+            <li> Resumen del Juego </li>
+        </ul>
         <li> Juego C </li>
+        <ul>
+            <li> Resumen del Juego </li>
+        </ul>
         <li> Juego D </li>
+        <ul>
+            <li> Resumen del Juego </li>
+        </ul>
         <li> Juego E </li>
+        <ul>
+            <li> Resumen del Juego </li>
+        </ul>
     </ul>
 </body>
 </html>
