cambie el nombre del segundo juego y agregue su imagen de portada

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
             <li> Resumen del Juego </li>
         </ul>
         <br><br>
-        <li> Juego B </li>
+        <li> Hollow knight Silksong </li>
+        <img src="https://hardzone.es/app/uploads-hardzone.es/2025/09/Portada-Silksong.jpg?x=500&y=295&quality=80" width="500" height="300">
         <ul>
             <li> Resumen del Juego </li>
         </ul>
+        <br><br>    
         <li> Juego C </li>
         <ul>
             <li> Resumen del Juego </li>
