--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             <li> Resumen del Juego </li>
         </ul>
         <br><br>    
-        <li> Juego C </li>
+        <li> Project Zomboid </li>
+        <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/108600/header.jpg?t=1739309087" width="500" height="300">  
         <ul>
             <li> Resumen del Juego </li>
         </ul>
+        <br><br>
         <li> Juego D </li>
         <ul>
             <li> Resumen del Juego </li>
