cambie el nombre del cuarti juego y agregue su imagen de portada

--- a/index.html
+++ b/index.html
@@ -29,10 +29,12 @@
             <li> Resumen del Juego </li>
         </ul>
         <br><br>
-        <li> Juego D </li>
+        <li> Devil May Cry </li>
+        <img src="https://media.vandal.net/m/55314/devil-may-cry-hd-collection-201831310286_11.jpg" width="500" height="300">
         <ul>
             <li> Resumen del Juego </li>
         </ul>
+        <br><br>
         <li> Juego E </li>
         <ul>
             <li> Resumen del Juego </li>
