agregue resumen del segundo juego

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <img src="https://hardzone.es/app/uploads-hardzone.es/2025/09/Portada-Silksong.jpg?x=500&y=295&quality=80" width="500" height="300">
         <ul>
             <li> Resumen del Juego </li>
+            <li> Hollow Knight: Silksong es la esperada secuela del aclamado juego de aventuras y acción en 2D. En esta entrega, los jugadores asumen el papel de Hornet, una nueva protagonista con habilidades únicas, mientras exploran un vasto y misterioso reino lleno de enemigos desafiantes, secretos ocultos y una narrativa intrigante.</li>  
         </ul>
         <br><br>    
         <li> Project Zomboid </li>
