--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <img src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/108600/header.jpg?t=1739309087" width="500" height="300">  
         <ul>
             <li> Resumen del Juego </li>
+            <li> Project Zomboid es un juego de supervivencia en un mundo post-apocalíptico infestado de zombis. Los jugadores deben gestionar recursos, construir refugios y enfrentarse a amenazas mientras intentan sobrevivir el mayor tiempo posible en un entorno hostil y dinámico.</li>
         </ul>
         <br><br>
         <li> Devil May Cry </li>
