agregue resumen del cuarto juego

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <img src="https://media.vandal.net/m/55314/devil-may-cry-hd-collection-201831310286_11.jpg" width="500" height="300">
         <ul>
             <li> Resumen del Juego </li>
+            <li> Devil May Cry es una serie de juegos de acción y aventura que sigue las hazañas del cazador de demonios Dante. Con combates rápidos y estilizados, los jugadores enfrentan hordas de enemigos demoníacos mientras exploran mundos oscuros y llenos de acción.</li>
         </ul>
         <br><br>
         <li> Assassin's Creed Odyssey </li>
