--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <img src="https://static.wikia.nocookie.net/assassinscreed/images/f/f5/Assassin%27s_Creed_Odyssey.jpg/revision/latest/scale-to-width-down/1200?cb=20220506151142" width="500" height="300"> 
         <ul>
             <li> Resumen del Juego </li>
+            <li> Assassin's Creed Odyssey es un juego de rol y acción ambientado en la antigua Grecia. Los jugadores asumen el papel de un mercenario espartano, explorando un vasto mundo abierto, participando en combates épicos y tomando decisiones que afectan la narrativa y el destino del personaje.</li>
         </ul>
     </ul>
 </body>
