solucion de error de centrado de titulos

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <p aling="center"> STEAM </p>
+    <p align="center"> STEAM </p>
     <br><br>
-    <p aling="center"> STORE </p>
+    <p align="center"> STORE </p>
     <br><br>
     <ul>
         <li> Hollow knight </li>
